General cleanup & polish